--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "parcel-plugin-static-files-copy": "^2.1.1",
     "pug": "^2.0.3",
     "sass": "^1.20.1",
+    "vue-devtools": "^5.0.0-beta.1",
     "vue-template-compiler": "^2.6.10"
   },
   "staticFiles": {
